2009-08-05  Neil Williams,,,  <linux@codehelp.co.uk>

	patch by: Chris Leick <c.leick@vollbio.de>

	* po/LINGUAS:
	* po/de.po (added): Add German translation.

2009-07-06  Neil Williams  <linux@codehelp.co.uk>

	* qof.pc.in: Migrate -lqofsql to Libs.private
	* qof/Makefile.am: Isolate qofsql link commands from
	  libgda3 link commands. Completes 0.8.1 release.

2009-07-05  Neil Williams  <linux@codehelp.co.uk>

	* backend/file/qsf-xml-map.c:
	* backend/file/qsf-xml.c:
	* qof/guid.c:
	* qof/qofid.c:
	* qof/qofutil.c: Fix build errors with gcc-4.4 by
	expanding some casts and simplifying guid_hash_to_guint.

	* configure.ac: Prepare new release, bump libglib2.0 dependency
	to at least 2.9.0.
	* qof/guid.c: Remove old conditionals for glib2.0 older than 2.9.0

2009-05-07  Neil Williams  <linux@codehelp.co.uk>

	* po/POTFILES.in: Move GDA backend out the
	translation support as that backend is not really
	ready.

2009-03-18  Neil Williams  <linux@codehelp.co.uk>

	* backend/file/Makefile.am, backend/file/qsf-backend.c,
	* backend/file/qsf-xml-map.c, backend/file/qsf-xml.c,
	* backend/gda/Makefile.am, backend/sqlite/Makefile.am,
	* qof/Makefile.am, qof/qof.h, configure.ac: Replace 
	the directory headers with defined variables in the Makefile.
	* doc/doxygen.cfg.in: Update doxygen configuration.

2009-01-02  Neil Williams  <linux@codehelp.co.uk>

	Add devhelp support by using the examples from
	DBus to create a suitable XML index from doxygen content.

2008-11-24  Neil Williams  <linux@codehelp.co.uk>

	* backend/gda/qof-gda.c (qgda_modify), backend/sqlite/qof-sqlite.c
	(qsql_modify), (update_dirty), qof/qofsql.c (string_param_to_sql),
	(collect_kvp),(qof_sql_entity_update): Implement support for
	QOF_TYPE_COLLECT for SQL using KVP slots.

2008-11-16  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c: mark kvpvalue_to_sql 
	as unused.
	* qof/kvpframe.c, qof/qofmath128.c, qof/qofmath128.h,
	qof/qofnumeric.c : Remove inline functions to make a